Finally fix (logical) bug that I thought I had fixed in my last PR of conversations list getting empty after some ONLINE_STATUS socket message receipt which also caused the non unique key in Chat.LeftPane.tsx; Add offline simulation/trigger feature for when user loses/gains internet connection; Fix multiple/redundant re-renders issue in Chat.tsx for Chat.MiddlePane.tsx (which also caused some infinite loop); Add feature of not showing loader for messages when messages have (initially) been loaded, for instance when user gains internet connection...this feature will eventually be utilized when feature for 'fetch messages on scrollView scroll' is added; Add fade effect for after when messages are loaded instead of the initial animated scroll to bottom effect; Make few adjustment(s) to UI; Fix bug of user ONLINE_STATUS not being emitted when user gains internet connection from a loss.
s

modified:   teach-me-ui/src/components/Main/Chat.RightPane.tsx

--- a/teach-me-ui/src/styles/Main/_Chat.RightPane.scss
+++ b/teach-me-ui/src/styles/Main/_Chat.RightPane.scss
@@ -1,7 +1,7 @@
 .chat-right-pane {
-  background-color: #eee;
+  background-color: #fff;
   max-height: 100vh;
-  border-left: 0.15rem solid #ddd;
+  border-left: 0.0625rem solid #ddd;
 
   .chat-header {
     background-color: inherit;
@@ -27,7 +27,7 @@
     }
 
     + .scroll-bar-fader {
-      background-color: #eee !important;
+      background-color: #fff !important;
     }
 
     .chat-avatar {
